--- a/simplepin/Base.lproj/Main.storyboard
+++ b/simplepin/Base.lproj/Main.storyboard
@@ -127,12 +127,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Simplepin" id="lnP-5z-Y1z">
-                        <barButtonItem key="leftBarButtonItem" image="ic_settings" style="plain" id="Gxu-1l-9LF">
+                        <barButtonItem key="leftBarButtonItem" image="ic_settings" id="Gxu-1l-9LF">
                             <connections>
                                 <segue destination="DH7-KZ-z3C" kind="presentation" identifier="openSettingsModal" id="FX0-Om-rkX"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="YM9-1Q-Tb1"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="YM9-1Q-Tb1"/>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="SJv-Yt-rhV">
                         <autoresizingMask key="autoresizingMask"/>
@@ -364,7 +364,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Settings" id="b9P-A0-Lnd">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="stop" id="4sQ-1G-N0E">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="4sQ-1G-N0E">
                             <connections>
                                 <segue destination="fOo-bN-THj" kind="unwind" identifier="closeSettings" unwindAction="unwindSettingsModal:" id="Qnk-Ts-sMd"/>
                             </connections>
